--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,7 @@ img {
   color: var(--second-text-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
   padding-top: 10px;
   padding-right: 32px;
   padding-bottom: 10px;
@@ -568,7 +569,7 @@ img {
 }
 
 .portfolio-item {
-  flex-basis: calc((100% - 3 * 30px) / 3);
+  flex-basis: calc((100% - 2 * 30px) / 3);
   margin-left: 30px;
   margin-bottom: 30px;
 }
@@ -633,18 +634,18 @@ img {
   height: 100%;
   top: 0;
   left: 0;
-  padding: 63px 24px 64px 24px;
+  padding: 63px 24px;
   background-color: rgba(33, 150, 243, 0.9);
   font-weight: 400;
   font-size: 18px;
-  line-height: 1.56;
+  line-height: 1.55;
   letter-spacing: 0.03em;
   color: var(--second-text-color);
   opacity: 0;
-  /* transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
-.portfolio-item:hover .overlay-text {
+.portfolio-link:hover .overlay-text,
+.portfolio-link:focus .overlay-text {
   opacity: 1;
   animation-name: portfolioanim;
   animation-duration: 300ms;
@@ -723,6 +724,7 @@ img {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-tel {
   font-family: Roboto;
@@ -731,6 +733,7 @@ img {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-container {
